# yhw

./: .why.toml  Cargo.toml  README.md  plan.md  test.csv  test.json
docs/: examples.md
src/: main.rs
src/analyzer/: dependency_graph.rs  metrics.rs  mod.rs  rust_analyzer.rs
src/cli/: args.rs  mod.rs
src/manifest/: cargo.rs  mod.rs  nodejs.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/views/: details.rs  mod.rs  overview.rs
src/utils/: config.rs  fs.rs  mod.rs
