[package]
name = "yhw"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to analyze dependencies in projects"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/why"
keywords = ["cli", "dependencies", "analysis", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Manifest file parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
walkdir = "2.4"
glob = "0.3"
dirs = "5.0"  # For finding config directories

# Rust code parsing and analysis
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# TUI components
ratatui = "0.24"
crossterm = "0.27"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.18"
indexmap = { version = "2.1", features = ["serde"] }
rayon = "1.8"  # For parallel processing of large codebases

# Dependency graph visualization
petgraph = "0.6"  # For dependency graph data structures

# Export formats
csv = "1.3"  # For CSV export
unicode-width = "0.2.0"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
pretty_assertions = "1.4"
test-case = "3.3"

[profile.release]
# Optimizations for release builds
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Strip symbols from binary
